[package]
name = "fltk-anchor"
version = "0.1.1"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "An anchoring mechanism for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-anchor"
documentation = "https://docs.rs/fltk-anchor"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.1.10"
bitflags = "1.3"
