[package]
name = "fltk-anchor"
version = "0.2.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "An anchoring mechanism for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-anchor"
documentation = "https://docs.rs/fltk-anchor"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.4"
bitflags = "2"
